cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker.cif.iec.err
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  ------------------------------------
  (1/1) A non-array list type is used.
  ------------------------------------
   * In algebraic variable "l":
     - alg list int l = [1, 2];
           ^
